--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "homepage": "https://github.com/AActr/POLLS-API#readme",
   "description": "",
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.1",
     "cors": "^2.8.5",
+    "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
     "jsonwebtoken": "^9.0.2",
