--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/AActr/POLLS-API/issues"
   },
@@ -25,7 +25,6 @@
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
-    "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.3",
     "stripe": "^17.7.0"
   }
